syntax = "proto3";

package protobuf;

message Package_Head {
	string type = 1;
	int64 session = 2;
}