syntax = "proto3";

package gameProto;

message Player_Create_Character {
	//request
	string name = 1;
	
	//response
	// r=1,有重名的角色
	int32 r = 2;
}
